--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,9 @@ services:
       - POSTGRES_PASSWORD=postgres
 
   web:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.dev
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     ports:
       - "3000:3000"
