--- a/scripts/templates/docker/Dockerfile.dev
+++ b/scripts/templates/docker/Dockerfile.dev
@@ -1,7 +1,7 @@
 FROM ruby:RUBY_VERSION
 
-ARG NODE_VERSION=20
 # 必要なライブラリのインストール
+# nodeいらなければnode周りのインストールを削除する
 RUN apt-get update -qq && \
   apt-get install -y libpq-dev curl gnupg2 && \
   curl -fsSL https://deb.nodesource.com/setup_NODE_VERSION.x | bash - && \
@@ -16,6 +16,7 @@ WORKDIR /app
 ADD Gemfile* /app/
 RUN bundle install
 
+# node入らなければ削除する
 ADD package.json /app/
 RUN yarn install --check-files
 
